--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: Moakap's Blog
+subtitle: 'Keep moving, keep thinking!'
 description: ''
 keywords:
-author: John Doe
-language: en
-timezone: ''
+author: moakap
+language: zh-cn
+timezone: '0800'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://moakap.github.io/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
