--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: 'Keep moving, keep thinking!'
 description: ''
 keywords:
 author: moakap
-language: zh
+language: en
 timezone: '0800'
 
 # URL
