--- a/themes/minos/_config.yml
+++ b/themes/minos/_config.yml
@@ -27,7 +27,6 @@ article:
 menu:
   Archives: /archives
   Lifestyle: /categories/LifeStyle
-  Music: /categories/Music
   Technology: /categories/Technology
   About: /about
 
@@ -62,10 +61,10 @@ plugins:
 # is set to the class name of a FontAwesome 5 icon. The `footer_links` below also gives an
 # example of setting plain text links.
 navbar_links:
-  GitHub:
-    icon: fab fa-github
-    url: https://github.com/ppoffice/hexo-theme-minos
+  # GitHub:
+    # icon: fab fa-github
+    # url: https://github.com/ppoffice/hexo-theme-minos
 
 # Links at the bottom of the page.
 footer_links:
-  GitHub: https://github.com/ppoffice/hexo-theme-minos
+  # GitHub: https://github.com/ppoffice/hexo-theme-minos
