--- a/themes/minos/_config.yml
+++ b/themes/minos/_config.yml
@@ -26,7 +26,7 @@ article:
 # Navigation bar menu links.
 menu:
   Archives: /archives
-  Lifestyle: /categories/LifeStyle
+  Lifestyle: /categories/Lifestyle
   Technology: /categories/Technology
   About: /about
 
