--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -566,25 +566,25 @@ comments:
   style: tabs
   # Choose a comment system to be displayed by default.
   # Available values: changyan | disqus | disqusjs | gitalk | livere | valine
-  active: disqus | valine
+  active: valine
   # Setting `true` means remembering the comment system selected by the visitor.
   storage: true
   # Lazyload all comment systems.
   lazyload: false
   # Modify texts or order for any navs, here are some examples.
   nav:
-    disqus:
-      text: Load Disqus
-      order: -1
-    valine:
-      text: Load Valine
-      order: -2
+    #disqus:
+      #text: Load Disqus
+      #order: -1
+    #valine:
+      #text: Load Valine
+      #order: -2
     #gitalk:
     #  order: -2
 
 # Disqus
 disqus:
-  enable: true
+  enable: false
   shortname: moakap
   count: true
   #post_meta_order: 0
@@ -766,7 +766,7 @@ swiftype_key:
 # See: https://chatra.io
 # Dashboard: https://app.chatra.io/settings/general
 chatra:
-  enable: true
+  enable: false
   async: true
   id: 8bJkPKgPL44u2PqrC # Visit Dashboard to get your ChatraID
   #embed: # Unfinished experimental feature for developers. See: https://chatra.io/help/api/#injectto
