--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source
+      - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Setup Node.js
@@ -17,9 +17,11 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install Hexo
+      - name: Install dependencies
         run: |
           npm install -g hexo-cli
+          npm uninstall node-sass
+          npm install sass
           npm install
 
       - name: Generate static files
